# poe-chat-assistant

./: .gitignore  LICENSE  README.md  go.mod  go.sum  mise.toml  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
cmd/app/: main.go
docs/: index.html
internal/chat/: model.go  parser.go  parser_test.go  store.go
internal/config/: config.go
internal/hotkey/: focus_darwin.go  focus_other.go  focus_windows.go  hotkey.go  hotkey_darwin.go  hotkey_other.go  hotkey_windows.go  manager.go
internal/logwatcher/: watcher.go
internal/translation/: cache.go  deepl.go  gemini.go  google.go  service.go  service_test.go  translator.go
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/chat/: model.rs  store.rs
src-tauri/src/config/: mod.rs
src-tauri/src/focus/: mod.rs
src-tauri/src/translation/: cache.rs  gemini.rs  google.rs  mod.rs  service.rs
src/components/: DetailPane.tsx  FilterBar.tsx  MessageItem.tsx  MessageList.tsx  SettingsOverlay.tsx
src/hooks/: useConfig.ts  useMessages.ts  useTranslation.test.ts  useTranslation.ts
src/types/: chat.test.ts  chat.ts  config.ts
src/utils/: filter.test.ts  filter.ts
tauri-app/: index.html  package-lock.json  package.json  tailwind.config.ts
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
testdata/: Client.txt
ui/: app.go  chatlist.go  detail.go  settings.go  theme.go
(+12 files in other folders)
