[package]
name = "poe-chat-assistant"
version = "0.1.0"
edition = "2021"

[lib]
name = "poe_chat_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "poe-chat-assistant"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
dirs = "6"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
tauri-plugin-window-state = "2.4.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[profile.release]
strip = true
lto = true
